2014-06-17  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * gpasm/directive.c, gpasm/evaluate.c, gpasm/gpasm.h.in,
    gpasm/lst.c, gpasm/macro.c, gpasm/parse.y, gpasm/preprocess.c,
    gpasm/scan.l, gpasm/special.c, gpasm/util.c:
    Better recognizable names of constants and change of text format.

2014-06-16  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * gpasm/cod.c, gpasm/coff.c, gpasm/deps.c, gpasm/gpasm.h.in,
    gpasm/evaluate.c, gpasm/gpasm.c, gpasm/macro.c, gpasm/parse.y:
    Renamed some definitions.

  * gputils/testsuite/gpdasm.project/objasm/data2e.asm,
    gputils/testsuite/gpdasm.project/objfiles/data2e.o,
    gputils/testsuite/gpdasm.project/objlstfiles/data2e.lst:
    A new variant (PIC14E) of test files.

  * libgputils/gpprocessor.h:
    New definitions: REG_PIC14E_FSRy, IS_EEPROMy, IS_SX_CORE, IS_PIC1yyy_CORE

  * libgputils/gpdis.c, gpasm/directive.c, gpasm/lst.c,
    gpasm/processor.c, gpasm/scan.l, gpasm/util.c:
    Use new definitions and changed text format.

2014-06-16  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * gpasm/directive.c:
    Use more definitions.

  * libgputils/gpdis.c, libgputils/gpprocessor.c:
    Changed text format.

2014-06-15  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * gputils/block.c, gputils/dump.c, gputils/gplib.c,
    gputils/gpstrip.c, gputils/gpvc.c, gputils/gpvo.c:
    Changed text format.

2014-06-15  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * gpasm/directive.c:
    Changed text format.

  * gplink/lst.c:
    Changed the parameter number of gp_disassemble_byte() function and text format.

  * gputils/gpvo.c:
    Changed the parameter number of gp_disassemble() function and text format.

  * gputils/gpdasm.c, gputils/gpdasm.h.in, libgputils/gpdis.c,
    libgputils/gpdis.h, libgputils/gpprocessor.c, libgputils/gpprocessor.h,
    libgputils/gpsystem.c:
    New option in gpdasm: -n, --show-names